--- a/src/components/userData/userData.css
+++ b/src/components/userData/userData.css
@@ -3,19 +3,19 @@
 }
 
 .user__card__data h2{
-    font-size: 36px;
+    font-size: 150%;
     font-weight: 800;
     margin: 10px;
 }
 
 .user__card__data h3{
-    font-size: 24px;
+    font-size: 100%;
     font-weight: 600;
     margin: 5px;
 }
 
 .user__card__data h4{
-    font-size: 18px;
+    font-size: 80%;
     font-weight: 400;
     margin: 3px;
 }
@@ -23,11 +23,12 @@
 .user__card__data a{
     color: #68A2A4;
     display: block;
+    font-size: 80%;
     margin: 5px;
     text-decoration: none;
 }
 
 .user__card__data a:hover{
     transition: 0.2s ease-in-out;
-    font-size: 20px;
+    font-size: 100%;
 }
