--- a/src/containers/functionalPanel/functionalPanel.css
+++ b/src/containers/functionalPanel/functionalPanel.css
@@ -6,10 +6,18 @@
     width: 100%;
 }
 
+.user__card__func__panel a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .user__card__func__panel__button1{
+    align-items: center;
     background: none;
     border: none;
     border-right: 2px solid #c9c9c9;
+    display: flex;
+    justify-content: center;
     outline: none;
     width: 50%;
 }
