--- a/src/containers/main/main.css
+++ b/src/containers/main/main.css
@@ -9,3 +9,10 @@ main{
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 768px) {
+    .user__card__row{
+        display: flex;
+        flex-direction: column;
+    }
+}
