--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,6 @@
 header{
     background-color: #24292e;
+    box-shadow: 0 3px 4px rgba(0,0,0, 0.4);
     display: flex;
     justify-content: center;
     height: 120px;
